--------------------------------------------------------------------------------
Changelog for Asides.
--------------------------------------------------------------------------------

2011/xx/xx: 1.0.0-pl
========================================================
- Added id placeholder for the wrapper, to allow a better
  css styling/targeting.

2011/06/29: 1.0.0-rc3
========================================================
- Added some parameters to showAside snippet:
  &wrapper, &toPlaceholder

2011/05/30: 1.0.0-rc2
========================================================
- Added TinyMCE as default chunk editor
 (so now TinyMCE Extra is required).

2011/05/23: 1.0.0-rc1
========================================================
- Initial release.