@@ -11,11 +11,11 @@ $chunkArray = $modx->getCollection('modChunk',array(
 
 $chunkNames = array();
 
-/* Put the chunk names into the array */
+// Put the chunk names into the array
 foreach($chunkArray as $chunk) {
     $chunkNames[] = $chunk->get('name');
 }
 
-/* Format the chunknames as a delimited string for the TV */
+// Format the chunknames as a delimited string for the TV
 $l_chunks = implode('||',$chunkNames);
 return $l_chunks;
