@@ -36,6 +36,7 @@ $_lang['asides.aside_err_ae'] = 'An aside already exists with that name.';
 $_lang['asides.aside_err_nf'] = 'Aside not found.';
 $_lang['asides.aside_err_ns'] = 'Aside not specified.';
 $_lang['asides.aside_err_remove'] = 'An error occurred while trying to remove the aside.';
+$_lang['asides.aside_err_remove_in_use'] = 'This aside is still used in the following(s) resource(s):<br /><br />[[+ids]].<br /><br />Please remove it from those resource(s) before deleting it.';
 $_lang['asides.aside_err_save'] = 'An error occurred while trying to save the aside.';
 $_lang['asides.aside_remove'] = 'Remove this aside';
 $_lang['asides.aside_remove_confirm'] = 'Are you sure you want to remove this aside?';
